# docuview

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  alembic.ini  pyproject.toml  run.txt
migrations/: env.py
migrations/versions/: 20260423_1002_initial_empty_migration_baseline_dff347f11c72.py  a1eda7b28416_initial_empty_migration_baseline.py
scripts/: dev.sh
src/docuview/: __main__.py  config.py  main.py
src/docuview/core/: config.py
src/docuview/db/: __init__.py  base.py  session.py
tests/: test_smoke.py
web/app/: page.tsx
